--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
        - esdata:/usr/share/elasticsearch/data
 
   web:
-    image: medium-search-app
+    # image: file-search-app
+    build: .
     container_name: search-app
     depends_on:
       - es
