--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     #    - esdata:/usr/share/elasticsearch/data
 
   web:
-    image: ${DOCKER_REGISTRY}/file-search-app:web
-    # build: .
+    # image: ${DOCKER_REGISTRY}/file-search-app:web
+    build: .
     container_name: search-app
     depends_on:
       - es
